--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,8 @@
     <dimen name="button_width_numeric">85dp</dimen>
     <dimen name="button_width_disease">60dp</dimen>
 
+    <dimen name="column_width">120dp</dimen>
+    <dimen name="row_height">120dp</dimen>
+    <dimen name="column_header_height">120dp</dimen>
+    <dimen name="row_header_width">120dp</dimen>
 </resources>
