Updated layout and version

--- a/app/src/main/res/layout/activity_data_grid.xml
+++ b/app/src/main/res/layout/activity_data_grid.xml
@@ -39,6 +39,7 @@
 
         <com.evrencoskun.tableview.TableView
             android:id="@+id/tableView"
+            android:layout_marginTop="8dp"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:allow_click_inside_cell="true"
