Added skip entries preference modes. 1. Disabled by default 2. Skip entries that have already observed the active trait. 3. Skip entries that have already observed all visible traits.

--- a/app/src/main/res/xml/preferences_behavior.xml
+++ b/app/src/main/res/xml/preferences_behavior.xml
@@ -47,12 +47,14 @@
         android:summary="@string/preferences_general_use_day_number_description"
         android:title="@string/preferences_general_use_day_number" />
 
-    <CheckBoxPreference
-        android:defaultValue="false"
+    <ListPreference
         android:icon="@drawable/ic_adv_hide_entries"
         android:key="IgnoreExisting"
-        android:summary="@string/preferences_general_skip_entries_with_data_description"
-        android:title="@string/preferences_general_skip_entries_with_data" />
+        android:summary="@string/preferences_general_skip_entries_disabled"
+        android:title="@string/preferences_general_skip_entries_with_data"
+        android:entries="@array/pref_behavior_skip_entries_entries"
+        android:entryValues="@array/pref_behavior_skip_entries_values"
+        android:defaultValue="1"/>
 
     <CheckBoxPreference
         android:defaultValue="false"
