Updated IgnoreExisting preference key to avoid conflicts caused by outdated preferences.

--- a/app/src/main/res/xml/preferences_behavior.xml
+++ b/app/src/main/res/xml/preferences_behavior.xml
@@ -49,7 +49,7 @@
 
     <ListPreference
         android:icon="@drawable/ic_adv_hide_entries"
-        android:key="IgnoreExisting"
+        android:key="com.fieldbook.tracker.HIDE_ENTRIES"
         android:summary="@string/preferences_general_skip_entries_disabled"
         android:title="@string/preferences_general_skip_entries_with_data"
         android:entries="@array/pref_behavior_skip_entries_entries"
