--- a/app/src/main/res/layout/trait_gnss.xml
+++ b/app/src/main/res/layout/trait_gnss.xml
@@ -102,13 +102,17 @@
         <TextView
             android:id="@+id/latTextView"
             style="@style/TextData"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            app:layout_constraintEnd_toStartOf="@+id/lngHeader"
             app:layout_constraintStart_toEndOf="@+id/latHeader"
             app:layout_constraintTop_toBottomOf="@+id/utcHeader"
-            android:layout_marginLeft="8dp" />
+            tools:text="108.199219921992" />
 
         <TextView
             android:id="@+id/lngHeader"
@@ -129,6 +133,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            tools:text="071.1719931993"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/utcHeader"
             android:layout_marginRight="8dp" />
