--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -48,8 +48,8 @@
         android:title="" />
     <item
         android:id="@+id/action_act_collect_geonav_sw"
-        android:icon="@drawable/ic_explore_black_24dp"
-        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_explore_off_black_24dp"
+        android:showAsAction="always"
         android:title="@string/menu_collect_start_geo_nav_title"/>
 </menu>
 
