--- a/app/src/main/res/layout/trait_date.xml
+++ b/app/src/main/res/layout/trait_date.xml
@@ -99,6 +99,15 @@
                     android:textStyle="bold" />
 
             </LinearLayout>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/trait_date_calendar_visibility_btn"
+                android:src="@drawable/ic_event_black_24dp"
+                android:layout_gravity="center"
+                android:contentDescription="@string/trait_date_calendar_picker_content_description" />
+
         </LinearLayout>
     </LinearLayout>
 </com.fieldbook.tracker.traits.DateTraitLayout>
