--- a/app/src/main/res/xml/preferences_brapi.xml
+++ b/app/src/main/res/xml/preferences_brapi.xml
@@ -55,18 +55,9 @@
     </PreferenceCategory>
 
     <PreferenceCategory
-        android:key="brapi_server_list"
+        android:key="brapi_oidc_settings"
         android:title="@string/preferences_brapi_advanced_title"
         app:iconSpaceReserved="false">
-
-        <EditTextPreference
-            android:defaultValue="@string/brapi_oidc_url_default"
-            android:dialogMessage="@string/brapi_oidc_url_desc"
-            android:dialogTitle="@string/brapi_oidc_url"
-            android:icon="@drawable/ic_adv_brapi_base"
-            android:key="BRAPI_OIDC_URL"
-            android:summary="@string/brapi_oidc_url_desc"
-            android:title="@string/brapi_oidc_url" />
 
         <ListPreference
             android:defaultValue="@string/preferences_brapi_oidc_flow_oauth_implicit"
@@ -76,6 +67,15 @@
             android:key="BRAPI_OIDC_FLOW"
             android:summary="%s"
             android:title="@string/preferences_brapi_oidc_flow" />
+
+        <EditTextPreference
+            android:defaultValue="@string/brapi_oidc_url_default"
+            android:dialogMessage="@string/brapi_oidc_url_desc"
+            android:dialogTitle="@string/brapi_oidc_url"
+            android:icon="@drawable/ic_adv_brapi_base"
+            android:key="BRAPI_OIDC_URL"
+            android:summary="@string/brapi_oidc_url_desc"
+            android:title="@string/brapi_oidc_url" />
 
     </PreferenceCategory>
 
