--- a/app/src/main/res/layout/trait_date.xml
+++ b/app/src/main/res/layout/trait_date.xml
@@ -101,12 +101,15 @@
             </LinearLayout>
 
             <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/trait_date_calendar_visibility_btn"
-                android:src="@drawable/ic_event_black_24dp"
+                android:layout_width="110dp"
+                android:layout_height="55dp"
                 android:layout_gravity="center"
-                android:contentDescription="@string/trait_date_calendar_picker_content_description" />
+                android:layout_marginTop="15dp"
+                android:contentDescription="@string/trait_date_calendar_picker_content_description"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_event_black_24dp" />
 
         </LinearLayout>
     </LinearLayout>
