--- a/app/src/main/res/layout/listitem_field.xml
+++ b/app/src/main/res/layout/listitem_field.xml
@@ -92,12 +92,12 @@
     <ImageView
         android:id="@+id/popupMenu"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical|right"
         android:paddingTop="3dp"
         android:paddingRight="20dp"
         android:paddingLeft="10dp"
         android:src="@drawable/ic_more_vert"
-        android:scaleType="fitEnd"/>
+        android:scaleType="fitCenter"/>
 
 </LinearLayout>
