--- a/app/src/main/res/layout/selector_dropdown.xml
+++ b/app/src/main/res/layout/selector_dropdown.xml
@@ -8,8 +8,9 @@
 
     <Spinner
         android:id="@+id/selectorSpinner"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0.2"
         android:text="@string/main_infobar_title"
         android:textColor="@color/s_text"
         android:textSize="@dimen/text_size_xlarge"
@@ -19,9 +20,10 @@
         android:id="@+id/selectorText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:ellipsize="end"
         android:maxLines="1"
-        android:paddingLeft="10dp"
+        android:layout_marginLeft="10dp"
         android:scrollHorizontally="true"
         android:textColor="#000000"
         android:textSize="@dimen/text_size_xlarge"
