Layout changes Changelog updates

--- a/app/src/main/res/layout/dialog_brapi_import.xml
+++ b/app/src/main/res/layout/dialog_brapi_import.xml
@@ -149,7 +149,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/studyPrimaryKeyLbl"
@@ -174,7 +174,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="0"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/studySecondaryKeyLbl"
