--- a/app/src/main/res/layout/trait_gnss.xml
+++ b/app/src/main/res/layout/trait_gnss.xml
@@ -35,7 +35,7 @@
                 lngHeader,lngTextView,
                 altHeader,altTextView,
                 hdopHeader,hdopTextView,
-                gnss_collect_button, disconnect_button"
+                gnss_collect_button, disconnect_button, gnss_trait_averaging_switch"
             tools:visibility="visible" />
 
         <TextView
@@ -229,6 +229,15 @@
             app:layout_constraintTop_toBottomOf="@id/hdopHeader"
             app:layout_constraintHorizontal_weight="1" />
 
+        <androidx.appcompat.widget.SwitchCompat
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:id="@+id/gnss_trait_averaging_switch"
+            android:checked="false"
+            android:text="@string/gnss_trait_averaging_switch_text"
+            app:layout_constraintTop_toBottomOf="@id/disconnect_button"
+            app:layout_constraintStart_toStartOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
