--- a/app/src/main/res/layout/selector_dropdown.xml
+++ b/app/src/main/res/layout/selector_dropdown.xml
@@ -6,9 +6,9 @@
     android:background="@android:color/white"
     android:orientation="horizontal">
 
-    <Spinner
+    <com.fieldbook.tracker.views.DynamicWidthSpinner
         android:id="@+id/selectorSpinner"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/main_infobar_title"
         android:textColor="@color/s_text"
