--- a/app/src/main/res/drawable/table_cell_highlighted.xml
+++ b/app/src/main/res/drawable/table_cell_highlighted.xml
@@ -4,8 +4,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <stroke
-        android:color="#8000FF00"
-        android:width="1dp" />
+        android:color="@color/main_colorAccent"
+        android:width="1dp"/>
+
+    <solid
+        android:color="#99795548" />
 
     <padding
         android:bottom="5dp"
