Changed collect activity geo nav snack bar messages to be high contrast. GeoNav log: Now prints unique id. Fixed gps updates and iz log race condition Change column order to show start lat/long first and plot parameters (primary/secondary/unique) last Added third state to closest (look at documentation for more detail) Added trapezoid method Added separate preferences page for geonav removed triangle method

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="pref_geonav_search_methods">
+        <item>@string/pref_geonav_method_distance</item>
+        <item>@string/pref_geonav_method_trapezoid</item>
+    </string-array>
+    <string-array name="pref_geonav_search_methods_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
     <string-array name="pref_geonav_search_angles">
         <item>22.5°</item>
         <item>45°</item>
