--- a/app/src/main/res/xml/preferences_brapi.xml
+++ b/app/src/main/res/xml/preferences_brapi.xml
@@ -6,13 +6,15 @@
         android:title="@string/preferences_brapi_core_title"
         app:iconSpaceReserved="false">
 
-        <com.fieldbook.tracker.preferences.BetterEditTextPreference
+        <org.phenoapps.sharedpreferences.dialogs.NeutralButtonEditTextDialog
             android:defaultValue="@string/brapi_base_url_default"
             android:dialogMessage="@string/brapi_base_url_desc"
             android:dialogTitle="@string/brapi_base_url"
             android:icon="@drawable/ic_adv_brapi_base"
             android:key="BRAPI_BASE_URL"
-            android:positiveButtonText="@string/brapi_save_authorize"
+            app:positiveButtonText="@string/brapi_save_authorize"
+            app:negativeButtonText="@android:string/cancel"
+            app:neutralButtonText="@string/scan_barcode"
             android:summary="%s"
             android:title="@string/brapi_base_url" />
 
@@ -68,14 +70,17 @@
             android:summary="%s"
             android:title="@string/preferences_brapi_oidc_flow" />
 
-        <EditTextPreference
+        <org.phenoapps.sharedpreferences.dialogs.NeutralButtonEditTextDialog
             android:defaultValue="@string/brapi_oidc_url_default"
             android:dialogMessage="@string/brapi_oidc_url_desc"
             android:dialogTitle="@string/brapi_oidc_url"
             android:icon="@drawable/ic_adv_brapi_base"
             android:key="BRAPI_OIDC_URL"
             android:summary="@string/brapi_oidc_url_desc"
-            android:title="@string/brapi_oidc_url" />
+            android:title="@string/brapi_oidc_url"
+            app:positiveButtonText="@android:string/ok"
+            app:negativeButtonText="@android:string/cancel"
+            app:neutralButtonText="@string/scan_barcode"/>
 
     </PreferenceCategory>
 
