Added preference summaries. Added units to parameters. Fixed activity title. Removed GeoNav category header.

--- a/app/src/main/res/xml/preferences_geonav.xml
+++ b/app/src/main/res/xml/preferences_geonav.xml
@@ -2,9 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory
-        android:title="@string/pref_behavior_geonav_category_title"
-        app:iconSpaceReserved="false">
+    <PreferenceCategory app:iconSpaceReserved="false">
 
         <CheckBoxPreference
             android:defaultValue="false"
