--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -36,6 +36,12 @@
         app:fragment="com.fieldbook.tracker.preferences.GeoNavPreferencesFragment" />
 
     <Preference
+        android:icon="@drawable/ic_emoticon_cool"
+        android:key="pref_key_ar_settings"
+        android:title="@string/preference_ar_title"
+        app:fragment="com.fieldbook.tracker.preferences.VuzixPreferencesFragment" />
+
+    <Preference
         android:icon="@drawable/ic_pref_sounds"
         android:key="pref_key_sounds_settings"
         android:title="@string/preferences_sounds"
