--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,52 +4,52 @@
     <item
         android:id="@+id/help"
         android:icon="@drawable/ic_tb_help"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/tutorial_dialog_title" />
     <item
         android:id="@+id/nextEmptyPlot"
         android:icon="@drawable/ic_tb_forward"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/main_toolbar_next_entry_no_data" />
     <item
         android:id="@+id/jumpToPlot"
         android:icon="@drawable/ic_tb_barcode"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/main_toolbar_moveto" />
     <item
         android:id="@+id/barcodeScan"
         android:icon="@drawable/ic_tb_barcode_scan"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/main_toolbar_barcode_scan" />
     <item
         android:id="@+id/datagrid"
         android:icon="@drawable/ic_tb_datagrid"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/preferences_general_feature_datagrid" />
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_tb_search"
-        android:showAsAction="always"
-        android:title="@string/main_toolbar_search" />"
+        app:showAsAction="always"
+        android:title="@string/main_toolbar_search" />
     <item
         android:id="@+id/resources"
         android:icon="@drawable/ic_tb_folder"
-        android:showAsAction="always"
-        android:title="@string/main_toolbar_resources" />"
+        app:showAsAction="always"
+        android:title="@string/main_toolbar_resources" />
     <item
         android:id="@+id/summary"
         android:icon="@drawable/ic_tb_details"
-        android:showAsAction="always"
-        android:title="@string/preferences_appearance_toolbar_customize_summary" />"
+        app:showAsAction="always"
+        android:title="@string/preferences_appearance_toolbar_customize_summary" />
     <item
         android:id="@+id/lockData"
         android:icon="@drawable/ic_tb_lock"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="" />
     <item
         android:id="@+id/action_act_collect_geonav_sw"
         android:icon="@drawable/ic_explore_off_black_24dp"
-        android:showAsAction="always"
+        app:showAsAction="always"
         android:title="@string/menu_collect_start_geo_nav_title"/>
 </menu>
 
