Change migrator button color to main_colorAccent When selecting folder, if .fieldbook file exists, don't show Migrator Update strings to say Field Book instead of Coordinate android:showAsAction="always" Update Root Directory preference strings to match Prospector/Coordinate strings. Summary does not currently display selected folder

--- a/app/src/main/res/menu/menu_data_grid.xml
+++ b/app/src/main/res/menu/menu_data_grid.xml
@@ -6,6 +6,6 @@
     <item
         android:id="@+id/menu_data_grid_action_header_view"
         android:icon="@drawable/ic_view_split_vertical"
-        app:showAsAction="always"
+        android:showAsAction="always"
         android:title="@string/menu_action_header_view_data_grid_title" />
 </menu>
