--- a/app/src/main/res/menu/menu_settings.xml
+++ b/app/src/main/res/menu/menu_settings.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- Warning / error below for showAsAction should be ignored until Toolbar is replaced with AppCompatToolbar-->
+
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/help"
         android:icon="@drawable/ic_tb_help"
-        app:showAsAction="always"
+        android:showAsAction="always"
         android:title="@string/tutorial_dialog_title" />
     <item
         android:id="@+id/changelog"
         android:icon="@drawable/ic_tb_changelog"
-        app:showAsAction="always"
+        android:showAsAction="always"
         android:title="@string/changelog_title" />
 </menu>
 
