--- a/app/src/main/res/layout/fragment_storage_definer.xml
+++ b/app/src/main/res/layout/fragment_storage_definer.xml
@@ -26,7 +26,7 @@
 
     <Button style="@style/TextAppearance.MaterialComponents.Button"
         android:text="@string/define"
-        android:background="@color/main_colorAccent"
+        android:background="@color/main_primaryDark"
         android:id="@+id/frag_storage_definer_choose_dir_btn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
