--- a/app/src/main/res/xml/preferences_brapi.xml
+++ b/app/src/main/res/xml/preferences_brapi.xml
@@ -47,6 +47,15 @@
             android:title="@string/brapi_pagination" />
 
         <com.fieldbook.tracker.preferences.BetterEditTextPreference
+            android:defaultValue="500"
+            android:icon="@drawable/ic_transfer"
+            android:inputType="number"
+            android:key="BRAPI_CHUNK_SIZE"
+            android:selectAllOnFocus="true"
+            android:summary="%s"
+            android:title="@string/brapi_chunk_size" />
+
+        <com.fieldbook.tracker.preferences.BetterEditTextPreference
             android:defaultValue="120"
             android:icon="@drawable/ic_pref_brapi_timeout"
             android:inputType="number"
