--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -267,6 +267,31 @@
         app:layout_constraintTop_toBottomOf="@id/traitDetails"
         app:layout_constraintHeight_percent="0.13" />
 
+    <Spinner
+        android:id="@+id/replicateVal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/rangeLeft"
+        app:layout_constraintRight_toLeftOf="@+id/repeated_values_add_btn"
+        app:layout_constraintTop_toBottomOf="parent" />
+
+    <ImageButton
+        android:id="@+id/repeated_values_add_btn"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:adjustViewBounds="false"
+        android:background="@drawable/round_button_background"
+        android:cropToPadding="false"
+        android:elevation="5dp"
+        android:fitsSystemWindows="true"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_plus" />
+
     <EditText
         android:id="@+id/etCurVal"
         android:layout_width="match_parent"
@@ -284,7 +309,7 @@
         app:layout_constraintBottom_toTopOf="@id/svTraitContainer"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/valuesPlotRangeHolder" />
+        app:layout_constraintTop_toBottomOf="@id/repeated_values_add_btn" />
 
     <ScrollView
         android:id="@+id/svTraitContainer"
