--- a/app/src/main/res/menu/menu_fields.xml
+++ b/app/src/main/res/menu/menu_fields.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="AppCompatResource">
     <item
         android:id="@+id/help"
@@ -13,13 +13,13 @@
         android:showAsAction="always"
         android:title="" />
     <item
-        android:id="@+id/importField"
-        android:icon="@drawable/ic_tb_add_circle"
-        android:showAsAction="ifRoom"
-        android:title="@string/fields_toolbar_add_field" />
-    <item
         android:id="@+id/action_select_plot_by_distance"
         android:icon="@drawable/ic_explore_black_24dp"
         android:showAsAction="ifRoom"
-        android:title="@string/menu_fields_plot_by_distance_title"/>
+        android:title="@string/menu_fields_plot_by_distance_title" />
+    <item
+        android:id="@+id/importField"
+        android:icon="@drawable/ic_tb_add_circle"
+        android:showAsAction="always"
+        android:title="@string/fields_toolbar_add_field" />
 </menu>
