--- a/app/src/main/res/menu/menu_traits.xml
+++ b/app/src/main/res/menu/menu_traits.xml
@@ -3,7 +3,9 @@
 <!-- Warning / error below for showAsAction should be ignored until Toolbar is replaced with AppCompatToolbar-->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="AppCompatResource">
     <item
         android:id="@+id/help"
         android:icon="@drawable/ic_tb_help"
@@ -15,24 +17,24 @@
         android:showAsAction="always"
         android:title="@string/traits_sort_visibility" />
     <item
-        android:id="@+id/addTrait"
-        android:icon="@drawable/ic_tb_add_circle"
-        android:showAsAction="always"
-        android:title="@string/traits_toolbar_add_trait" />
-    <item
         android:id="@+id/sortTrait"
         android:icon="@drawable/ic_tb_sort"
-        android:showAsAction="always"
+        android:showAsAction="ifRoom"
         android:title="@string/traits_toolbar_sort" />
     <item
         android:id="@+id/deleteTrait"
         android:icon="@drawable/ic_tb_delete"
-        android:showAsAction="always"
+        android:showAsAction="ifRoom"
         android:title="@string/traits_toolbar_delete_all" />
     <item
         android:id="@+id/importexport"
         android:icon="@drawable/ic_tb_import_export"
-        android:showAsAction="always"
+        android:showAsAction="ifRoom"
         android:title="@string/traits_toolbar_import_export" />
+    <item
+        android:id="@+id/addTrait"
+        android:icon="@drawable/ic_tb_add_circle"
+        android:showAsAction="always"
+        android:title="@string/traits_toolbar_add_trait" />
 </menu>
 
