updated default value

--- a/app/src/main/res/xml/preferences_brapi.xml
+++ b/app/src/main/res/xml/preferences_brapi.xml
@@ -97,7 +97,7 @@
         android:title="@string/preferences_brapi_traits_title"
         app:iconSpaceReserved="false">
         <ListPreference
-            android:defaultValue="@string/preferences_appearance_collect_labelval_customize_value"
+            android:defaultValue="value"
             android:dialogTitle="@string/preferences_appearance_collect_labelval_customize"
             android:entries="@array/pref_collect_labelval_customize_title"
             android:entryValues="@array/pref_collect_customize_labelval"
