--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -86,6 +86,20 @@
         <item>3</item>
     </string-array>
 
+    <string-array name="pref_general_skip_entries_entries">
+        <item>@string/preferences_general_skip_entries_disabled</item>
+        <item>@string/preferences_general_skip_entries_with_data</item>
+        <item>@string/preferences_general_skip_entries_across_all_traits</item>
+        <item>@string/preferences_general_skip_entries_default</item>
+    </string-array>
+
+    <string-array name="pref_general_skip_entries_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
     <string-array name="pref_brapi_version">
         <item>@string/preferences_brapi_version_v1</item>
         <item>@string/preferences_brapi_version_v2</item>
@@ -110,4 +124,5 @@
         <item>@string/preferences_appearance_collect_labelval_customize_value</item>
         <item>@string/preferences_appearance_collect_labelval_customize_label</item>
     </string-array>
+    <string name="preferences_general_skip_entries_default">Default</string>
 </resources>
