update geonav message ui geonav doesn't display if manually navigated to that plot

--- a/app/src/main/res/layout/geonav_snackbar_layout.xml
+++ b/app/src/main/res/layout/geonav_snackbar_layout.xml
@@ -13,7 +13,7 @@
         android:backgroundTint="#00ffffff"
         android:scaleX="1.2"
         android:scaleY="1.2"
-        android:src="@drawable/ic_explore_black_24dp"
+        android:src="@drawable/ic_explore_white_24dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/geonav_snackbar_tv"
@@ -27,6 +27,8 @@
         android:maxLines="1"
         android:text="1111111111111111111111111111111111111111"
         android:textSize="@dimen/text_size_large"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/geonav_snackbar_btn"
         app:layout_constraintStart_toEndOf="@id/geonav_snackbar_icn"
@@ -37,10 +39,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
-        android:backgroundTint="#00ffffff"
+        android:backgroundTint="#00FFFFFF"
         android:scaleX="1.2"
         android:scaleY="1.2"
-        android:src="@drawable/ic_send_outline"
+        android:src="@drawable/ic_send_white_outline"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
