--- a/app/src/main/res/layout/dialog_new_trait.xml
+++ b/app/src/main/res/layout/dialog_new_trait.xml
@@ -19,6 +19,8 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:layout_margin="2dp"
+                android:background="@drawable/cell"
                 android:id="@+id/formatbox"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -51,6 +53,8 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_margin="2dp"
+                android:background="@drawable/cell"
                 android:id="@+id/traitbox"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -82,6 +86,8 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_margin="2dp"
+                android:background="@drawable/cell"
                 android:id="@+id/defbox"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -123,6 +129,8 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_margin="2dp"
+                android:background="@drawable/cell"
                 android:id="@+id/minbox"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -156,6 +164,8 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_margin="2dp"
+                android:background="@drawable/cell"
                 android:id="@+id/maxbox"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -189,6 +199,8 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_margin="2dp"
+                android:background="@drawable/cell"
                 android:id="@+id/detailsbox"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -221,7 +233,9 @@
             </LinearLayout>
 
             <LinearLayout
+                android:layout_margin="2dp"
                 android:id="@+id/categorybox"
+                android:background="@drawable/cell"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -240,16 +254,41 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/categories"
-                    android:layout_width="fill_parent"
+                    android:id="@+id/categoryLabelEt"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:hint="@string/traits_create_categories_text"
+                    android:hint="@string/traits_create_categories_label_text"
                     android:imeOptions="actionNext"
                     android:inputType="textCapWords"
                     android:paddingRight="10dp"
                     android:textColor="#000000"
                     android:textSize="@dimen/text_size_small" />
+
+                <EditText
+                    android:id="@+id/categoryValueEt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:hint="@string/traits_create_categories_value_text"
+                    android:imeOptions="actionNext"
+                    android:inputType="textCapWords"
+                    android:paddingRight="10dp"
+                    android:textColor="#000000"
+                    android:textSize="@dimen/text_size_small" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/dialog_new_trait_cat_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"/>
+
+                <Button
+                    android:id="@+id/dialog_new_trait_cat_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:text="@string/dialog_new_trait_add_cat_button_text"/>
 
             </LinearLayout>
         </LinearLayout>
