init commit for usb camera trait

--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -383,6 +383,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
 
+            <include
+                layout="@layout/trait_usb_camera"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
     </ScrollView>
 
