changelog and icons

--- a/app/src/main/res/xml/preferences_general.xml
+++ b/app/src/main/res/xml/preferences_general.xml
@@ -69,7 +69,7 @@
 
     <CheckBoxPreference
         android:defaultValue="false"
-        android:icon="@drawable/ic_account_tie_voice"
+        android:icon="@drawable/ic_tts"
         android:key="TTS_LANGUAGE_ENABLED"
         android:summary="@string/preferences_general_tts_description"
         android:title="@string/preferences_general_tts_title" />
