--- a/app/src/main/res/layout/activity_choose_language.xml
+++ b/app/src/main/res/layout/activity_choose_language.xml
@@ -7,7 +7,7 @@
         android:id="@+id/act_choose_language_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:name="org.phenoapps.fragments.tts.LocaleListFragment"
+        android:name="com.fieldbook.tracker.fragments.FieldBookLocaleListFragment"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
