--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -6,8 +6,9 @@
     android:layout_height="wrap_content">
 
     <TextView
-        tools:text="Label"
-        android:id="@+id/list_item_category_label_tv"
+        android:layout_margin="4dp"
+        tools:text="Value"
+        android:id="@+id/list_item_category_value_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="@dimen/text_size_small"
@@ -16,20 +17,6 @@
         app:layout_constraintBottom_toBottomOf="@id/list_item_category_delete_btn"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/list_item_category_value_tv"/>
-
-    <TextView
-        tools:text="Value"
-        android:id="@+id/list_item_category_value_tv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/text_size_small"
-        android:maxLines="1"
-        android:ellipsize="end"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        app:layout_constraintBottom_toBottomOf="@id/list_item_category_delete_btn"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/list_item_category_label_tv"
         app:layout_constraintEnd_toStartOf="@id/list_item_category_delete_btn"/>
 
     <Button
@@ -39,7 +26,6 @@
         android:layout_height="wrap_content"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@id/list_item_category_value_tv"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <View
