updated language preference selection added flags

--- a/app/src/main/res/xml/preferences_appearance.xml
+++ b/app/src/main/res/xml/preferences_appearance.xml
@@ -18,13 +18,8 @@
             android:icon="@drawable/ic_nav_drawer_translate"
             android:key="language"
             android:summary="@string/preferences_appearance_language_description"
-            android:title="@string/preferences_appearance_language">
-
-<!--            <intent-->
-<!--                android:action="android.intent.action.MAIN"-->
-<!--                android:targetClass="com.android.settings.LanguageSettings"-->
-<!--                android:targetPackage="com.android.settings" />-->
-        </Preference>
+            android:title="@string/preferences_appearance_language"
+            app:fragment="com.fieldbook.tracker.preferences.LanguagePreferenceFragment"/>
 
         <CheckBoxPreference
             android:defaultValue="false"
